@@ -137,6 +137,13 @@ L<Catalyst>
 
 L<Catalyst::Plugin::Static::Simple>
 
+=head1 append:BUGS
+
+=head2 Reporting Security Vulnerabilities
+
+Security issues should not be reported on the bugtracker website.  Please see F<SECURITY.md> for instructions how to
+report security vulnerabilities
+
 =cut
 
 1;
