@@ -2,6 +2,8 @@ Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
   [Documentation]
+  - Added a security policy.
+
   - Updated copyright year.
 
   [Tests]
